--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.74",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
+    "sweetalert2": "^11.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
